<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/old_pic"
                android:layout_width="133dp"
                android:layout_height="71dp"
                android:src="@drawable/old" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/member_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_ID"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/member_ID_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.82"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/member_Nametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_Name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/input_member_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/member_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_phone"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/input_member_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

            <Switch
                android:id="@+id/member_phone_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/member_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_reward"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/input_member_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textMultiLine" />

        </LinearLayout>

        <TextView
            android:id="@+id/member_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_addr"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/input_member_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

    </LinearLayout>
	<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/member_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/member_gps_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    <Button
        android:id="@+id/btn_member_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_update" />


    <Button
        android:id="@+id/btn_get_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_gps" />

</LinearLayout>