<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/settime_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settime"
                android:textAppearance="?android:attr/textAppearanceLarge" />
 			
        </LinearLayout>
    </LinearLayout>

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
		   <Button
   	  		 android:id="@+id/btn_update"
       		 android:layout_width="wrap_content"
     	     android:layout_height="wrap_content"
     	     android:text="@string/btn_update" />
           <Button
   	  		 android:id="@+id/back"
       		 android:layout_width="wrap_content"
     	     android:layout_height="wrap_content"
     	     android:text="@string/btn_back" />
         </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
