<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="107dp"
                android:background="#220088"
                android:text="註冊"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/input_wd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register"
                android:layout_marginBottom="104dp"
                android:ems="10"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/input_ac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/input_wd"
                android:ems="10"
                android:hint="@string/account_hint" >
            </EditText>

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/input_wd"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/email_hint" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/input_ac"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:alpha="0.5"
                android:background="#220088"
                android:gravity="center_horizontal"
                android:text="註冊帳號"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>